# exercise

./: .gitignore  README.md  index.html  my.h  params.json
C_Traps_and_Pitfalls/: 1.1.c  a+++++b.c
DISALLOW_COPY_AND_ASSIGN/: main.cpp
NTPtime64/: main.cpp
acm.zjut.edu.cn/: 1000.cpp
apue/: open.c
atexit/: atexit_and_getenv.cpp
autoPtr/: a.out  main.cpp
autoTest/: commond.py  example1.py  example2.py  example3.py  host.xml  main.py  session.py
autoconf/: Makefile  Makefile.am  Makefile.in  configure  configure.ac  configure.in  main  main.cpp  sayhello.h
autoconf/.deps/: main.Po  sayhello.Po
autoconf/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
autoconf/include/: sayhello.cpp
autoconf/src/: Makefile.am
base_sub_class/: a.out  main.cpp
block_nonblock/: client  client.c  my.h  server  server.c  tcpdump
boostBind/: a.out  foreach.cc
boost_test/: first.cpp  foreach.cc  functionAtoi.cc  funtion.cpp  second.cpp
break/: main.cpp
char/: main.c
cin_cout/: main.cpp
class/: main.cpp
classsize/: main.cpp
constructor/: defaultConstructor.cpp  main.cpp
creatFile/: main.cpp
delete_operator/: a.out  delete.cpp
destructor/: main  main.cpp  main.cpp~  string_literal  string_literal.cpp  string_literal.cpp~
drived/: a.out  main  main.cpp
effective_c++/: 03_const_pointer.cc  07_virtual_dstruct_for_base.cpp  27_Min_Casting.cpp  33_avoid_hiding_inherited_names.cpp  a.out
epoll/: a.out  main.cpp  result
exception/: main.cpp
exec/: hello  hello.cpp  main  multiexec.cpp  test.cpp
explicit/: a.out  (+1 more)
(+158 files in other folders)
