#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Hello], [0.1], [liuxiaofei333@gmail.com])
AC_CONFIG_SRCDIR([src, include])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(Hello, 0.1)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([src/Makefile, ])
AC_OUTPUT
